--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/15rhw5XuDIxviWJ6FHYIPXHm6IzP3PdHZ/view?usp=drive_link">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/15rhw5XuDIxviWJ6FHYIPXHm6IzP3PdHZ/view?usp=drive_link">Resume.pdf</a></p>
 	          </div>
           </div>
 
