--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
-          	<h1 class="big big-2">Resume</h1>
-            <h2 class="mb-4">Resume</h2>
+          	<h1 class="big big-2">Brief</h1>
+            <h2 class="mb-4">Brief</h2>
             <p>Dynamic Frontend Developer adept in Angular with over 2+ years of hands-on experience, proficiently crafting and optimizing engaging user interfaces. Skilled in problem-solving, I leverage innovative solutions to overcome challenges and deliver seamless web experiences.</p>
           </div>
         </div>
